--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,7 +66,7 @@
     <Compile Include="Assets\Script\CameraShake.cs" />
     <Compile Include="Assets\Script\LaserRotation.cs" />
     <Compile Include="Assets\Script\SLRange.cs" />
-    <Compile Include="Assets\Script\TestScript.cs" />
+    <Compile Include="Assets\Script\SceneMoveManage.cs" />
     <Reference Include="UnityEngine">
       <HintPath>D:/Unity/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
